--- a/nuget.config
+++ b/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-        <add key="github" value="https://nuget.pkg.github.com/beyza.aydogan/index.json" />
+        <add key="github" value="https://nuget.pkg.github.com/beyzaaydogan/index.json" />
     </packageSources>
 </configuration>
