--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -29,6 +29,6 @@ jobs:
 
       - name: Publish package to GitHub Packages
         env:
-          GITHUB_TOKEN: ${{ secrets.PAYMENTINT_TOKEN }}
+          PAYMENTINT_TOKEN: ${{ secrets.PAYMENTINT_TOKEN }}
         run: |
-          dotnet nuget push ./nupkg/*.nupkg --source "github" --api-key $GITHUB_TOKEN
+          dotnet nuget push ./nupkg/*.nupkg --source "github" --api-key $PAYMENTINT_TOKEN --configfile ./nuget.config
