--- a/PaymentIntegration.HttpClient/PaymentIntegration.HttpClient.csproj
+++ b/PaymentIntegration.HttpClient/PaymentIntegration.HttpClient.csproj
@@ -5,7 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
-
+    <PropertyGroup>
+        <Version>1.0.1</Version>
+        <Authors>Beyza Aydogan</Authors>
+    </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.5" />
